# IBMMQ_assistant

./: .gitignore  CMakeLists.txt  README.md
IBMMQ_SDK/Lib64/: imqb23vn.Lib  imqb23vnvs2019.lib  imqb23vnvs2022.lib  imqc23vn.Lib  imqc23vnvs2019.lib  imqc23vnvs2022.lib  imqs23vn.Lib  imqs23vnvs2017.lib  imqs23vnvs2019.lib  imqs23vnvs2022.lib  imqx23vn.lib  imqx23vnvs2019.lib  imqx23vnvs2022.lib  mqcxa.LIB  mqic.LIB  mqiccb.LIB  mqiccbb.Lib  mqicxa.LIB  mqm.Lib  mqmax.Lib  mqmcb.LIB  mqmcbb.Lib  mqmvx.Lib  mqmvxd.Lib  mqmxa.Lib  mqmzf.Lib  mqutl.LIB  mqutx.LIB
IBMMQ_SDK/Lib64/VS2017/: imqb23vn.lib  imqc23vn.lib  imqx23vn.lib
IBMMQ_SDK/c/Samples/: MQuser.ldif  amqsact0.c  amqsaem.def  amqsaem0.c  amqsaicl.c  amqsaicq.c  amqsaiem.c  amqsailq.c  amqsapt0.c  amqsauth.c  amqsauth.h  amqsaxe.def  amqsaxe0.c  amqsbcg0.c  amqsblst.c  amqscbf0.c  amqscic0.ccs  amqscih0.h  amqsclma.c  amqscnxc.c  amqsecha.c  amqsevta.c  amqsfhac.c  amqsgbr0.c  amqsget0.c  amqsghac.c  amqsgrma.c  amqsinqa.c  amqsiqma.c  amqslog0.c  amqsmhac.c  amqsmon0.c  amqsphac.c  amqsprma.c  amqspse.def  amqspse0.c  amqsptl0.c  amqspuba.c  amqsput0.c  amqsqrm.def  (+31 more)
IBMMQ_SDK/c/Samples/dlq/: amqodkha.h  amqodqha.h  amqodqka.c  amqodqla.c  amqodqma.c  amqodqma.h  amqodqma.y  amqodqna.c  amqodqoa.c  amqodqpa.c  amqodqpa.l  amqodqua.c  amqodqx.mak  amqodtha.h
IBMMQ_SDK/c/Samples/mqccred/: mqccred.ini
IBMMQ_SDK/c/Samples/preconnexit/: amqlcel0.c  ibm-amq.schema
IBMMQ_SDK/c/Samples/pubsub/: amqsfmda.tst  amqsgama.c  amqsgama.tst  amqsgr2a.c  amqsppca.c  amqspr1a.c  amqspr2a.c  amqspsra.c  amqsresa.c  amqsresa.tst  amqsrr2a.c  amqsspca.c  amqssr1a.c  amqssr2a.c
IBMMQ_SDK/c/Samples/xatm/: amqsxab0.ec  amqsxab0.sqc  amqsxaf0.ec  amqsxaf0.sqc  amqsxag0.c  (+19 more)
IBMMQ_SDK/c/include/: amqsvmha.h  cmqbc.h  cmqc.h  cmqcfc.h  cmqec.h  cmqpsc.h  cmqstrc.h  cmqxc.h  cmqzc.h
IBMMQ_SDK/cplus/Samples/: imqdput.cpp  imqsget.cpp  imqsput.cpp  imqwrld.cpp
IBMMQ_SDK/cplus/include/: imqair.hpp  imqbin.hpp  imqcac.hpp  imqchl.hpp  imqcih.hpp  imqdlh.hpp  imqdst.hpp  imqerr.hpp  imqgmo.hpp  imqhdr.hpp  imqi.hpp  imqiih.hpp  imqitm.hpp  imqmgr.hpp  imqmsg.hpp  imqmtr.hpp  imqnml.hpp  imqobj.hpp  imqpmo.hpp  imqpro.hpp  imqque.hpp  imqrfh.hpp  imqstr.hpp  imqtrg.hpp  imqtype.h  imqwih.hpp
docs/: 软著-源码说明.md  软著-用户手册.md  软著-申请表填写稿.md
docs/superpowers/plans/: 2026-05-07-ibmmq-debug-assistant-mvp.md  2026-05-07-ibmmq-intelligent-diagnosis-replay-implementation.md
docs/superpowers/specs/: 2026-05-07-ibmmq-debug-assistant-design.md  2026-05-07-ibmmq-intelligent-diagnosis-replay-design.md
reports/: replay-report-20260507-182228.md
src/: main.cpp
src/app/: ConnectionConfig.h  MainWindow.cpp  MainWindow.h  MetaTypeRegistry.cpp  MetaTypeRegistry.h
src/diagnosis/: DiagnosisRuleEngine.cpp  DiagnosisRuleEngine.h  DiagnosisTypes.h
src/mq/: MessageFormatter.cpp  MessageFormatter.h  MqTypes.h  MqWorker.cpp  MqWorker.h
src/report/: ReportBuilder.cpp  ReportBuilder.h
src/session/: ReplayService.cpp  ReplayService.h  SessionRecorder.cpp  SessionRecorder.h  SessionTypes.h
tests/: test_connection_config.cpp  test_diagnosis_engine.cpp  test_message_formatter.cpp  test_metatype_registration.cpp  test_report_builder.cpp  test_session_recorder.cpp
